test/bad/classes/struct02.px

class Struct def
    Int n

r = Struct()
r.n = 1.0
